2006-11-06  Christian Persch  <chpe@cvs.gnome.org>

	* ChangeLog-20061106:
	* Makefile.am:

	Split ChangeLog.

	* configure.ac:

	Post-release version bump.