@@ -1,3 +1,9 @@
+2006-11-10  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
+
+	* src/ephy-window.c:
+	Add some more F5 shortcuts to handle all the MSIE
+	"refresh page" bindings. Fixes bug #372906.
+
 2006-11-06  Christian Persch  <chpe@cvs.gnome.org>
 
 	* ChangeLog-20061106:
